@@ -1,4 +1,5 @@
 #!/usr/bin/env bash
 
-export MAVEN_OPTS="-Xmx3000m"
+export MAVEN_OPTS="-Xmx4000m -XX:PermSize=128m -XX:-UseGCOverheadLimit"
+
 mvn jetty:run
